--- a/docs/locale/es/LC_MESSAGES/schema.po
+++ b/docs/locale/es/LC_MESSAGES/schema.po
@@ -3,13 +3,17 @@
 # This file is distributed under the same license as the PROJECT project.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2019.
 # 
+# Translators:
+# Javier Sarquis <sarquis.translations@gmail.com>, 2020
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2019-08-20 08:23+0100\n"
+"POT-Creation-Date: 2019-09-06 12:21+0000\n"
 "PO-Revision-Date: 2019-06-17 10:43+0000\n"
+"Last-Translator: Javier Sarquis <sarquis.translations@gmail.com>, 2020\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -374,7 +378,7 @@ msgstr ""
 #. /definitions/Interest/title
 #: schema/components.json:1
 msgid "Interest"
-msgstr ""
+msgstr "participación en el capital"
 
 #. /definitions/Interest/description
 #: schema/components.json:1
@@ -831,7 +835,7 @@ msgstr ""
 #. /title
 #: schema/entity-statement.json:1
 msgid "Entity statement"
-msgstr ""
+msgstr "declaración de la entidad"
 
 #. /description
 #: schema/entity-statement.json:1
@@ -1202,7 +1206,7 @@ msgstr ""
 #. /title
 #: schema/person-statement.json:1
 msgid "Person statement"
-msgstr ""
+msgstr "declaración de persona"
 
 #. /description
 #: schema/person-statement.json:1
