--- a/docs/locale/es/LC_MESSAGES/schema/schema-browser.po
+++ b/docs/locale/es/LC_MESSAGES/schema/schema-browser.po
@@ -3,13 +3,17 @@
 # This file is distributed under the same license as the Beneficial Ownership Data Standard package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Javier Sarquis <sarquis.translations@gmail.com>, 2020
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Beneficial Ownership Data Standard 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-06-17 11:38+0100\n"
+"POT-Creation-Date: 2019-09-06 12:18+0000\n"
 "PO-Revision-Date: 2019-06-17 10:44+0000\n"
+"Last-Translator: Javier Sarquis <sarquis.translations@gmail.com>, 2020\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -17,12 +21,12 @@ msgstr ""
 "Language: es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-# efd18c0b36164a89b4bf5f1f01e8531f
+# 014d4b8ece894864a536b5061149c585
 #: ../../schema/schema-browser.rst:4
 msgid "Schema browser"
 msgstr ""
 
-# 1fa7fd3496e448198b31a4be150474f5
+# 26661ac7582343c4b95634faf11e866b
 #: ../../schema/schema-browser.rst:8
 msgid ""
 "This is v0.2 of the Beneficial Ownership Data Standard. It includes updates "
@@ -32,7 +36,7 @@ msgid ""
 "information."
 msgstr ""
 
-# f1a803aadd834f9c99b6ede3c1dd9fae
+# c957653c402d4f42afeaba2c6ef13e6b
 #: ../../schema/schema-browser.rst:10
 msgid ""
 "**MUST** and **SHOULD** are used in the schema to denote required and "
@@ -40,14 +44,14 @@ msgid ""
 "<https://tools.ietf.org/html/rfc2119>`_."
 msgstr ""
 
-# 127d0460d9ed4f129deb1f3b51e59186
+# f24ad5988d134e368eb5a2c838b82113
 #: ../../schema/schema-browser.rst:13
 msgid ""
 "The draft Beneficial Ownership Data Standard schema is defined using `JSON "
 "Schema 0.4 <http://json-schema.org/>`_."
 msgstr ""
 
-# 52b78f402b4f473fade45253d3ba2ba0
+# 7c5d4ed37a244ceab8c2fb7ab99235f6
 #: ../../schema/schema-browser.rst:15
 msgid ""
 "The structure of each of the schema's top level components can be explored "
@@ -55,52 +59,52 @@ msgid ""
 "properties.)"
 msgstr ""
 
-# 80397c73f714462988de7ad94cb96af1
+# dcba07700384438bbb2e406711cf632d
 #: ../../schema/schema-browser.rst:17
 msgid ""
 ":ref:`Ownership-or-control statement <schema-browser-ownership-or-control>`"
 msgstr ""
 
-# b6245fc0a5f746b9a621a368d588fdb8
+# be37f396b2ca458e8dc76acda4ac45a8
 #: ../../schema/schema-browser.rst:18
 msgid ":ref:`Entity statement <schema-browser-entity>`"
 msgstr ""
 
-# 585c859ceb2b47b98688e288e637ad3e
+# 629b1ac0732843ae900873a929bbdd66
 #: ../../schema/schema-browser.rst:19
 msgid ":ref:`Person statement <schema-browser-person>`"
 msgstr ""
 
-# 52f6797e99e54ac29b50962fa413bf58
+# 0a339a21fa654c2986b036e6352164e5
 #: ../../schema/schema-browser.rst:24
 msgid "Ownership-or-control statement"
-msgstr ""
+msgstr "Declaración de titularidad o control"
 
-# c7b7fafcad6f47cc99a4732adfed71f3
+# 6aa7127396ea480ab2d337aa75bd5db2
 #: ../../schema/schema-browser.rst:26
 msgid ""
 "View the `Ownership-or-control statement JSON schema <../_static/ownership-"
 "or-control-statement.json>`_ or explore it using the viewer below."
 msgstr ""
 
-# 8cc030b146d44f3fb8ae2d7d86a1d255
+# 930477e80aa0471f88d515304f6063e4
 #: ../../schema/schema-browser.rst:35
 msgid "Entity statement"
-msgstr ""
+msgstr "declaración de la entidad"
 
-# 2d9b9e845ea742838358ecabadcdbc93
+# 1cd08bc801df47c68655f9bdbb35c807
 #: ../../schema/schema-browser.rst:38
 msgid ""
 "View the `Entity Statement JSON schema <../_static/entity-statement.json>`_ "
 "or explore it using the viewer below."
 msgstr ""
 
-# 5fedac435e9549159f4ece797f1d4a83
+# 5be87846dbef4eefba561af52d1c95d4
 #: ../../schema/schema-browser.rst:48
 msgid "Person statement"
-msgstr ""
+msgstr "declaración de persona"
 
-# 07907455b3104a78ac83c6d9fd23af62
+# 63515fef7995401d9ed667ff2e919c4b
 #: ../../schema/schema-browser.rst:50
 msgid ""
 "View the `Person Statement JSON schema <../_static/person-statement.json>`_ "
